home/argocd-alias/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-kcfam
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/target: kcfam.us
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`argocd.kcfam.us`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argocd-kcfam-us-tls
